# libdinemic

./: README.md
docs/: beginner-guide.md  protocol.md  using-actions.md
examples/chat/: CMakeLists.txt  chat.cpp  chat.h  chatlistener.cpp  chatlistener.h  config.dinemic  main.cpp  person.cpp  person.h
libdinemic/: CMakeLists.txt  LICENSE  compilation-dependencies.txt  config.dinemic  daction.h  dapp.h  dapphelpers.h  dconfig.h  dcrypt.h  dexception.h  dfield.h  dheaders.h  dinemic.pro  dmodel.h  logger.h  utils.h  version.h
libdinemic/store/: memorydriver.h  redisdriver.h  storeinterface.h
libdinemic/sync/: chargersync.h  dummysync.h  redissync.h  syncinterface.h  zeromqsync.h
